engagement/css/style.css
#slide {
    height: 100vh;
    position: fixed;
    top:0px;
    bottom:0px;
    left:0px;
    right:0px;
}

#slide.close-invitation {
    z-index: 6;
}

#slide.open-invitation {
    z-index: 4;
}

.carousel {
    z-index: 1;
    position: relative;
}

#slide .carousel-item img {
    object-fit: cover;
    height: 100vh;
}

.slide-overlay {
    background: rgba(0,0,0,0.7);
    position: absolute;
    top:0px;
    bottom:0px;
    right: 0px;
    left: 0px;
    z-index: 5;
}

.slide-content {
    display: flex;
    flex-direction: column-reverse;
    position: absolute;
    top:0px;
    bottom:0px;
    right: 0px;
    left: 0px;
    z-index: 10;
}

.slide-content .top-content {
    flex-grow: 1;
}

.slide-content .bottom-content {
    height: 225px;
}

.title-1 {
    font-family: 'Great Vibes', cursive;
    font-size: 3rem;
}

.title-1-sm {
    font-family: 'Great Vibes', cursive;
    font-size: 2rem;
}

.title-2-sm {
    font-family: 'Montserrat', sans-serif;
    font-size: 1.5rem;
    font-weight: normal;
}

.title-3-sm {
    font-family: 'Montserrat', sans-serif;
    font-size: 0.7rem;
    font-weight: 100;
}

.title-2-lg {
    font-family: 'Montserrat', sans-serif;
    font-size: 2.5rem;
    letter-spacing: 1rem;
}

.title-name {
    font-family: 'Oswald', sans-serif;
    font-size: 1.5rem;
    letter-spacing: 1rem;
}


.title-and {
    font-family: 'Great Vibes', sans-serif;
    font-size: 1.5rem;
}

.font-montserrat {
    font-family: 'Montserrat', sans-serif;
}

.invitation-to {
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
    letter-spacing: 0.4rem;
}

.invitation-name {
    font-family: 'Montserrat', sans-serif;
    font-size: 1.4rem;
    font-weight: lighter;
}

#content {
    min-height: 100vh;
    margin-top: 100vh;
    position:relative;
    z-index: 5;
    scroll-snap-type: y mandatory;
}

#content .child {
    scroll-snap-align: start;
}

#content-verse {
    min-height: 100vh;
}

.image-verse-1 {
    width: 250px;
    border: 10px solid #fff;
    transform: rotate(4deg);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.text-verse-1 {
    width: 250px;
    font-family: 'Montserrat', sans-serif;
    font-size: 1rem;
    font-weight: 500;
    color: #333;
}

#content-detail .icon {
    font-size: 3rem;
}

#form-rsvp {
    
}

.bg-color-1 {
    background: #c2a887;
}

.bg-color-2 {
    background: #8F3B1B;
}

.bg-color-3 {
    background: #61714D;
}

.bg-color-4 {
    background: #8FAE93;
}

.bg-color-5 {
    background: #6D152B;
}

.fc-1 {
    color: #333;
}

#content-detail {
    position: relative;
    z-index: 4;
    margin-top: -100vh;
}

#hidden-background {
    background: url("../assets/background-name-2.png") center center;
    background-size: cover;
    min-height: 100vh;
    position: sticky;
    top: 0px;
    z-index: 1;
}

.overlay {
    position: absolute;

}

#content-name {
    position:relative;
    z-index: 4;
    background-color: rgba(0, 0, 0, 0.6);
}

#content-photo {
    position:relative;
    z-index: 4;
    min-height: 100vh;
}

#form-rsvp-container {
    position: relative;
    z-index: 4;
}

#form-wish-container {
    position: relative;
    z-index: 4;
    min-height: 100vh;
    background-color: rgba(255,255,255,0.5);
}

#color-tone > div {
    height:30px;
}

